--- a/app/src/main/res/layout/follow_up_form_group_item.xml
+++ b/app/src/main/res/layout/follow_up_form_group_item.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <View style="@style/divider_line" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="55dp"
@@ -22,9 +24,10 @@
             android:id="@+id/tvGroupName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/space_10"
             android:layout_weight="1"
-            android:textColor="@color/black"
             android:gravity="left"
+            android:textColor="@color/black"
             android:textSize="@dimen/text_size_16" />
 
         <ImageView
@@ -33,4 +36,5 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <View style="@style/divider_line" />
 </LinearLayout>
