--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -114,4 +114,5 @@
     <color name="color_eeeeee">#eeeeee</color>
 
     <color name="color_dcdcdc">#dcdcdc</color>
+    <color name="color_f5fafd">#f5fafd</color>
 </resources>
