--- a/app/src/main/res/layout/head_textview.xml
+++ b/app/src/main/res/layout/head_textview.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/space_26"
-    android:background="@color/gray_light"
+    android:background="@color/gray_white"
     android:gravity="bottom"
-    android:paddingBottom="@dimen/space_6"
+    android:paddingBottom="@dimen/space_12"
     android:paddingLeft="@dimen/space_30"
     android:text="选择随访患者"
     android:textColor="@color/text_color_black"
