--- a/app/src/main/res/layout/activity_patient_select.xml
+++ b/app/src/main/res/layout/activity_patient_select.xml
@@ -8,30 +8,11 @@
 
     <include layout="@layout/top_title"></include>
 
-
-    <ScrollView
+    <ExpandableListView
+        android:id="@+id/expand_lv"
         android:layout_width="match_parent"
-        android:scrollbars="none"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <com.hxqydyl.app.ys.ui.fullshowview.FullShowExpandableListView
-                android:id="@+id/expand_lv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"></com.hxqydyl.app.ys.ui.fullshowview.FullShowExpandableListView>
-
-            <include
-                layout="@layout/foot_patient_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_20"
-                android:layout_alignParentBottom="true"></include>
-        </LinearLayout>
-    </ScrollView>
-
+        android:childDivider="@color/gray_light"
+        android:layout_height="wrap_content"
+        android:scrollbars="none" />
 
 </LinearLayout>
