--- a/app/src/main/res/layout/item_patient_select_child.xml
+++ b/app/src/main/res/layout/item_patient_select_child.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_light"
+    android:background="@color/gray_white"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -15,12 +15,12 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="90dip">
+        android:layout_height="66dip">
 
         <LinearLayout
             android:id="@+id/llPatientSimpleInfo"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
             android:orientation="horizontal"
@@ -29,13 +29,13 @@
 
             <ImageView
                 android:id="@+id/ivPatientPortrait"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:background="@mipmap/portrait_man" />
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="45dp"
                 android:layout_marginLeft="@dimen/space_10"
                 android:layout_marginRight="@dimen/space_10"
                 android:layout_weight="1"
