--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -6,24 +6,9 @@
 
     <include layout="@layout/top_title"></include>
 
-    <RelativeLayout
+    <com.hxqydyl.app.ys.ui.ProgressWebView
+        android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <WebView
-            android:id="@+id/webview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></WebView>
-
-        <Button
-            android:id="@+id/btn_send_patient"
-            android:visibility="gone"
-            style="@style/btn_blue"
-            android:text="发送给我的患者"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/space_30"
-            android:onClick="shareToPatient"
-            />
-
-    </RelativeLayout>
+        android:layout_height="match_parent"></com.hxqydyl.app.ys.ui.ProgressWebView>
 
 </LinearLayout>
