--- a/app/src/main/res/layout/activity_follow_apply_ok.xml
+++ b/app/src/main/res/layout/activity_follow_apply_ok.xml
@@ -15,13 +15,15 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="70dp">
 
                 <TextView
                     android:text="选择随访方案"
                     android:paddingLeft="15dp"
                     android:textSize="@dimen/text_size_22"
                     android:textColor="#545454"
+                    android:gravity="center_vertical"
                     android:layout_width="match_parent"
                     android:layout_height="60dp" />
 
@@ -60,7 +62,8 @@
                     android:textSize="@dimen/text_size_22"
                     android:textColor="#545454"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp" />
+                    android:layout_height="60dp"
+                    android:gravity="center_vertical" />
 
                 <com.hxqydyl.app.ys.ui.scrollviewandgridview.MyScrollListView
                     android:id="@+id/lvGroup"
@@ -81,7 +84,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent" />
                     <TextView
-                        android:text="新增方案"
+                        android:text="新增分组"
                         android:textSize="@dimen/text_size_20"
                         android:textColor="@color/white"
                         android:layout_width="wrap_content"
