--- a/app/src/main/res/layout/case_history_list_item.xml
+++ b/app/src/main/res/layout/case_history_list_item.xml
@@ -11,6 +11,7 @@
         <ImageView
             android:id="@+id/iv"
             android:layout_width="60dp"
+            android:layout_gravity="center"
             android:layout_height="60dp" />
 
         <ImageView
