--- a/app/src/main/res/layout/dialog_add_patient_group.xml
+++ b/app/src/main/res/layout/dialog_add_patient_group.xml
@@ -10,6 +10,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
