--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -78,7 +78,8 @@
             android:layout_height="45dp"
             android:layout_marginTop="@dimen/space_20"
             android:hint="@string/register_password"
-            android:inputType="number"
+            android:password="true"
+            android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
             android:paddingLeft="@dimen/space_15" />
 
         <Button
