修改随访表单等

--- a/app/src/main/res/layout/activity_patient_details.xml
+++ b/app/src/main/res/layout/activity_patient_details.xml
@@ -25,6 +25,7 @@
             android:paddingLeft="@dimen/space_5"
             android:paddingRight="@dimen/space_5"
             android:paddingTop="@dimen/space_5"
+            android:visibility="gone"
             android:text="@string/delete_patient" />
     </FrameLayout>
 
